# wasd-lang

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  errors.md  features.md  gpu.md  implementation.md  packages.md  spec.md  standardlib.md
.cargo/: config.toml
examples/arithmetic/: main.wasd
examples/async/: error_demo.wasd  main.wasd
examples/binary_search/: main.wasd
examples/calculator/: main.wasd
examples/closure_capture/: main.wasd
examples/closures/: main.wasd
examples/counter/: main.wasd
examples/effects/: error_demo.wasd  main.wasd
examples/enums/: main.wasd
examples/error_handling/: main.wasd
examples/exhaustiveness/: main.wasd
examples/factorial/: main.wasd
examples/ffi/: main.wasd
examples/fibonacci/: main.wasd
examples/fizzbuzz/: main.wasd
examples/for_loops/: main.wasd
examples/functions/: main.wasd
examples/generics/: main.wasd
examples/guessing_game/: main.wasd
examples/hashmap_demo/: main.wasd
examples/hello_world/: main.wasd
examples/linked_list/: main.wasd
examples/loops/: main.wasd
examples/memory/: main.wasd
examples/modules/: main.wasd  math.wasd
examples/prime_check/: main.wasd
examples/pure/: main.wasd
examples/recursion/: main.wasd
examples/sorting/: main.wasd
examples/stdlib/: main.wasd
examples/strings/: main.wasd
examples/structs_advanced/: main.wasd
mvp/: 00-summary.txt  01-type-system.txt  02-stdlib.txt  03-lsp.txt  04-repl.txt  05-codegen.txt  06-language-features.txt  07-tooling.txt  08-testing.txt
runtime/: wasd_runtime.c  wasd_runtime.h
src/: main.rs
(+69 files in other folders)
