[package]
name = "wasd"
version = "0.1.0"
edition = "2021"
description = "WASD programming language compiler"
license = "MIT"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# LLVM bindings
inkwell = { version = "0.5", features = ["llvm18-0"] }

# Error reporting
ariadne = "0.5"
thiserror = "2.0"

[dev-dependencies]
# Snapshot testing
insta = { version = "1.42", features = ["yaml"] }

[profile.release]
opt-level = 3
lto = "thin"
