[package]
name = "wasd"
version = "0.1.0"
edition = "2021"
description = "WASD programming language compiler"
license = "MIT"

[dependencies]
# CLI parsing
clap = { version = "4.5", features = ["derive"] }

# LLVM bindings
inkwell = { version = "0.5", features = ["llvm18-0"] }

# Error reporting
ariadne = "0.5"
thiserror = "2.0"

# LSP support
tower-lsp = "0.20"
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"

# Package manager
toml = "0.8"
toml_edit = "0.22"
semver = "1.0"
reqwest = { version = "0.12", features = ["blocking", "rustls-tls", "json"], default-features = false }
sha2 = "0.10"
flate2 = "1.0"
tar = "0.4"
serde = { version = "1.0", features = ["derive"] }
dirs = "5.0"

[dev-dependencies]
# Snapshot testing
insta = { version = "1.42", features = ["yaml"] }

[profile.release]
opt-level = 3
lto = "thin"
